--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -14,8 +14,8 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://otafsg1.h2os.com/patch/amazone2/GLO/OnePlus7TOxygen/OnePlus7TOxygen_13.W.23_GLO_0230_2102261720/OnePlus7TOxygen_13.W.23_OTA_0230_all_2102261720_86687b22.zip
-  ROM_NAME: OxygenOS
+  ROM_URL: https://www.coolapk.com/link?url=https%3A%2F%2Fdownload.meizu.com%2FFirmware%2FFlyme%2F16s_Pro%2F9.21.4.24%2Fcn_daily%2F20210424183833%2F68d12461%2Fupdate.zip
+  ROM_NAME: flyme
   TZ: Asia/Shanghai
 
 jobs:
