--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -15,7 +15,7 @@ on:
     
 env:
   ROM_URL: https://www.coolapk.com/link?url=https%3A%2F%2Fdownload.meizu.com%2FFirmware%2FFlyme%2F16s_Pro%2F9.21.4.24%2Fcn_daily%2F20210424183833%2F68d12461%2Fupdate.zip
-  ROM_NAME: flyme
+  ROM_NAME: Flyme
   TZ: Asia/Shanghai
 
 jobs:
